objects/MassConvert__ConfigurationManager__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>MassConvert__AccountsAutoConvertCondition__c</fullName>
        <label>Accounts Auto Convert Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MassConvert__AccountsFilterCriteria__c</fullName>
        <label>Accounts Filter Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MassConvert__AccountsMatchingCriteriaContainsValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Accounts Matching Criteria as Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MassConvert__AlwaysCreateNewAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Create New Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MassConvert__AutoConvertCondition__c</fullName>
        <description>Status = &apos;Contacted&apos; And LeadSource = &apos;Purchased List&apos;</description>
        <inlineHelpText>Example Text : Status = &apos;Contacted&apos; And LeadSource = &apos;Purchased List&apos;</inlineHelpText>
        <label>Leads Auto Convert Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MassConvert__BatchSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MassConvert__CustomCriteria__c</fullName>
        <inlineHelpText>Use 1 condition at a time:
1. where Account.Name in: Lead.Name OR Account.ExternalId__c in :Lead.ExternalId__c
2. where Account.Name in: Lead.Name AND Account.ExternalId__c in :Lead.ExternalId__c</inlineHelpText>
        <label>Accounts Matching Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MassConvert__EnableCustomCriteria__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Custom Criteria to Identify Existing Account</inlineHelpText>
        <label>Enable Custom Account Matching Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MassConvert__EnablePersonAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Person Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MassConvert__GenericDomains__c</fullName>
        <label>Generic Domains</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MassConvert__IsCreateOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MassConvert__Key__c</fullName>
        <label>License Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MassConvert__LeadsMatchingCriteria__c</fullName>
        <inlineHelpText>Used for identifying matching leads when auto-converting leads based on a newly created account</inlineHelpText>
        <label>Leads Matching Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MassConvert__RecordTypeSettings__c</fullName>
        <label>Record Type Settings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MassConvert__TriggerOnAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Trigger On Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MassConvert__TriggerOnLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Trigger On Leads</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Conversion Settings</label>
</CustomObject>